@@ -43,6 +43,8 @@ Known/suspected bugs/Missing Features on current Zmailer sources
 
 - Configuration files, esp.   cf/aliases.cf   has controversy in it.
   Many people think it is broken (I tend to agree) - 940614/mea
+BUG: Loop preventation needs a rewrite, and current one (2000/Apr/2)
+     is only 90% of it..
 
 - Canned error messages are abysmal -- they need more complete ways to
   configure what is told and how, whole error facility needs an overhaul
